# smart_calendar

./: README.md  pyproject.toml
src/smart_calendar/: __init__.py  agent.py  database.py  main.py  models.py  service.py  session.py  time_parser.py
tests/: test_core.py
